src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body{
  background-color: #000300;
  font-size: 100%;
}

.card {
  border: 3px solid #fff;
  background-color: #00df9a;
  border-radius: 8px;
  z-index: 900;
}

.felicitation {
  width: 95%;
  margin: 0 auto;
}

.slick-list {
  margin: 0 -10px;
}

.slick-slide > div {
  margin: 0 10px;
}

.navbar {
  background: black;
  position: sticky;
  top: 0;
  z-index: 950;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.timer {
  display: flex;
  flex: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.timer div:first-child {
  text-align: center;
  margin: 2em;
}

h2 {
  font-weight: 600;
  margin-bottom: 0.5em;
  color: #00df9a;
}

.timer div:last-child {
  border: 1px solid #fff;
  border-radius: 1px;
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  margin-top: 3em;
  padding: 3em;
  text-align: center;
  margin-right: 3em;
}

section p:first-child, .timer div:last-child span {
  font-size: 3em;
}

